# pose-classification-kit

./: .gitignore  BodyModel_Creation.ipynb  BodyPoseClassification-Models.ipynb  HandPoseClassification-Models.ipynb  LICENSE  Makefile  PoseClassifier.py  README.md  StartVideoAnalysis.bat  Util.py  VideoAnalysis.py  VideoOverlay.py  pyproject.toml  requirement.txt  requirements.txt
Application/: __main__.py
Application/scripts/: video_creation.py
Application/src/: body_analysis.py  classifier_selection_widget.py  dataset_controller.py  hand_analysis.py  openpose.py  openpose_thread.py
Data/: modelTmp.h5
Dataset/: JoinedHands_body.json  Stand_RightArmRaised_body.json  Stand_body.json  TPose_body.json  Tree_right_body.json  UpwardSalute_body.json  Warrior2_body.json  Warrior2_left_body.json  Warrior2_right_body.json  example_body.json
Dataset/Body/: Seated_body.json  T_body.json  standing_body.json
Dataset/Hands/: 0_right_hand.json  1_right_hand.json  2_right_hand.json  3_left_hand.json  3_right_hand.json  5_left_hand.json  5_right_hand.json  6_left_hand.json  6_right_hand.json  7_right_hand.json  8_left_hand.json  Chef_right_hand.json  Dislike_right_hand.json  Fight_Fist_left_hand.json  Fight_Fist_right_hand.json  Help_right_hand.json  Horns_left_hand.json  Loser_left_hand.json  Metal_left_hand.json  Ok_left_hand.json  Power_Fist_right_hand.json  Stop_left_hand.json  Stop_right_hand.json  Super_left_hand.json  VIP_left_hand.json  VIP_right_hand.json  Water_left_hand.json  Water_right_hand.json
Models/: BodyPoseClassification-Models.ipynb  BodyPoseClassification-Models.ipynb.ipynb  HandPoseClassification-Models.ipynb
Models/24Output-2x128-17epochs/: 24Output-2x128-17epochs_left.h5  24Output-2x128-17epochs_right.h5  class.txt
Models/27Class_3x64/: 27Class_3x64_left.h5  class.txt
Models/FingerCounting/: FingerCounting_left.h5  FingerCounting_right.h5  class.txt
Models/FullDataset/: FullDataset_left.h5  FullDataset_right.h5  class.txt
Models/RestaurantNumbersExtended/: RestaurantNumbersExtended_left.h5  RestaurantNumbersExtended_right.h5  class.txt
Models/SimpleRestaurantSignals/: SimpleRestaurantSignals_left.h5  SimpleRestaurantSignals_right.h5  class.txt
examples/: body_pose_classification.ipynb  datasets_exploration.ipynb  hand_pose_classification.ipynb
examples/CNN_BODY18_1/: CNN_BODY18_1.h5
examples/JetsonNano_inference/: .gitignore  model_optimization.ipynb  pose_classification_optimization.ipynb  pose_estimation_optimization.ipynb  processing_pipeline.ipynb  processing_pipeline_multithread.py  trtPoseClassification.ipynb
openhand_app/: __init__.py  __main__.py
openhand_app/scripts/: dataset_export.py  dataset_json.py  video_creation.py
openhand_app/src/: body_analysis.py  classifier_selection_widget.py  dataset_controller.py  dynamic_bar_graph_widget.py  hand_analysis.py  openpose_thread.py  tensorflow.py  video_manager.py
openhand_classifier/: DatasetController.py  HandAnalysis.py  PoseClassifier.py  VideoAnalysis.py  VideoInput.py  __init__.py  __main__.py
openhand_classifier/scripts/: DatasetBuilder.py  PoseClassifier.py  video_creation.py
openhand_classifier/src/: DatasetController.py  HandAnalysis.py  PoseClassifier.py  Util.py  VideoInput.py  dataset_controller.py  hand_analysis.py  openpose_analysis.py  openpose_thread.py  qt.py  video_manager.py  video_widget.py
openhand_classifier/widget_custom/: DatasetController.py  HandAnalysis.py  VideoInput.py
pose-classification-kit/: app.py  config.py
pose-classification-kit/scripts/: dataset_export.py  video_creation.py
pose-classification-kit/src/: body_analysis.py  classifier_selection_widget.py  dataset_controller.py  dynamic_bar_graph_widget.py  hand_analysis.py  openpose.py  openpose_thread.py  video_manager.py
pose_classification_kit/: app.py  config.py
pose_classification_kit/datasets/: __init__.py  body_models.py  data_augmentation.py
pose_classification_kit/models/: __init__.py
pose_classification_kit/scripts/: dataset_export.py  (+1 more)
tests/: test_openhand_classifier.py
(+156 files in other folders)
