[tool.poetry]
name = "pose-classification-kit"
version = "1.1.0"
description = "From pose estimation to pose classification - Creation of datasets & real-time visualization"
authors = ["ArthurFDLR <arthfind@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"   # Python 3.9 not currently supported by OpenPose
opencv-python = "^4.4.0"
pyqt5 = "^5.15.1"       # Can be replaced by: pyside2 = "^5.15.1"
matplotlib = "^3.3.2"
qimage2ndarray = "^1.8.3"
tensorflow = "^2.4.0"
numpy = ">=1.19.0,<1.19.4"
pandas = "^1.1.5"
rsa = "^4.7.2"
urllib3 = "^1.26.5"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
