[tool.poetry]
name = "pose-classification-kit"
version = "1.1.4"
description = "From pose estimation to pose classification - Creation of datasets & real-time visualization"
authors = ["ArthurFDLR <arthfind@gmail.com>"]
keywords = ["pose-classification", "OpenPose", "pose-estimation", "machine-learning", "deep-learning", "keypoints", "keypoints-detection", "gesture"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ArthurFDLR/pose-classification-kit"
repository = "https://github.com/ArthurFDLR/pose-classification-kit"
include = [
    "LICENSE", "README.md"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.6.2, <4.0"
tensorflow = "*"
numpy = "*" #">=1.19.0,<1.19.4"
pandas = "^1.1.5"
opencv-python = {version = "^4.4.0", optional = true}
matplotlib = {version = "^3.3.2", optional = true}
PyQt5 = {version = "^5.15.4", optional = true}
qimage2ndarray = {version = "^1.8.3", optional = true}

[tool.poetry.extras]
app = ["PyQt5", "matplotlib", "opencv-python", "qimage2ndarray"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.poetry.scripts]
export-datasets = "pose_classification_kit.scripts.dataset_export:run"
pose-classification-app = "pose_classification_kit.app:run"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
